--- a/package.json
+++ b/package.json
@@ -1,6 +1,3 @@
-
-
-
 {
   "name": "se_project_react",
   "version": "0.1.0",
@@ -12,9 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://RWallace1ro.github.io/se_project_react"
-
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,9 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build" 
+    "deploy": "gh-pages -d build"
   },
-    
   "eslintConfig": {
     "extends": [
       "react-app",
